# multi-model-flow

./: .env.example  CLAUDE.md  Dockerfile  MultiAgent'sPlan.md  PORTFOLIO.md  Project-short-summary.md  README.md  docker-compose.yml  main.py  projects-index-entry.json  pyproject.toml  render.yaml  requirements.txt
docs/: MULTI_AGENT_SPEC.md  guide.html
src/: __init__.py  config.py  flow.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: __init__.py  ask_user.py  blueprint.py  critic.py  feasibility.py  intake.py  pattern.py  priority.py
src/api/: __init__.py  main.py  routes.py
src/db/: __init__.py  mongodb.py  repositories.py
src/llm/: __init__.py  client.py  prompts.py
src/models/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  gpt.py  grok.py  manus.py  mistral.py  perplexity.py  qwen.py
src/static/: index.html
tests/: __init__.py  test_scoring.py
